Modified how to play page, added win percentage on leaderboard page and index page

--- a/application/views/rules.hbs
+++ b/application/views/rules.hbs
@@ -35,7 +35,7 @@
 
             <div id="header"></div>
             <main>
-            <section id="rules" class="section">
+            <section id="rule" class="section">
                 <header>
                     Rules
                 </header>
@@ -59,56 +59,94 @@
                 <div class="demotiles">
                     <div class="tile">
                         <video width="45%" controls class="video">
-                            <source src="video/hello.mp4" type="video/mp4">
+                            <source src="video/Roll6.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                         <article class="description">
-                            2 to 4 players begin by throwing the die. Players take turns in clockwise order; highest throw of the die will start.
-                            Each player needs to throw the die and he/she must roll a six in order to move a piece out of the base and onto the starting sequence.
-                            Now, that piece is then in play and it can be moved according to the rolling of die.
+                            <p><b>Roll a 6 to bring your first pawn onto the board</b>.</p>
+                            <p>
+                                To start moving a pawn across the board, each player must roll a 6 on their turn.
+                                If the starting person doesn’t roll a 6, then the player to the right of them takes their turn.
+                                If you do roll a 6, bring a pawn onto the board and place it on the start space.
+                            </p>
+                        </article>
+                    </div>
+                    <div class="tile">
+                        <image src="Images/after6.jpg" width="45%" class="video"></image>
+                        <article class="description">
+                            <p><b>Roll again to determine how many spaces to move your first pawn.</b></p>
+                            <p>
+                                After you roll a 6 and get a pawn onto the board, roll a second time to determine how many spaces that pawn may move.
+                                Move the pawn as many spaces as the number you roll.
+                            </p>
+                            <ul>
+                                <li>For example, if you roll a 2, then move the pawn 2 spaces.</li>
+                            </ul>
+                        </article>
+                    </div>
+                    <div class="tile">
+                        <image src="Images/turn.jpg" width="45%" class="video"></image>
+                        <article class="description">
+                            <p><b>Continue to roll at the beginning of each turn and move your pawns.</b></p>
+                            <p>
+                                Gameplay should move in a clockwise fashion.
+                                After one player takes their turn, the next player takes their turn, and so on all the way around the table.
+                                Each player should roll the die, and then move a pawn or add a new pawn to the board depending on the roll.
+                            </p>
+                            <ul>
+                                <li>If the player rolls a 6, they can place a pawn on the board and then roll again to move it.</li>
+                                <li>If the player rolls a 1-5 and has a pawn on the board already, they can move that pawn.</li>
+                                <li>If a player rolls a 1-5 and does not have a pawn on the board, then they cannot move and it is the next player’s turn.</li>
+                            </ul>
                         </article>
                     </div>
                     <div class="tile">
                         <video width="45%" controls class="video">
-                            <source src="video/hello.mp4" type="video/mp4">
+                            <source src="video/out.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                         <article class="description">
-                            If a six is rolled, the player can choose to either move a piece out of his base onto the starting square or move a piece that is in play.
-                            Anytime a six is rolled, a player gets chance to roll the die again.
+                            <p><b>Capture an opponent’s pawn by landing on the same space.</b></p>
+                            <p>
+                                You can capture an opponent’s pawn any time you land on the same space one of their pawns is on.
+                                If you land on another player’s pawn space, that player must take the pawn off of the board.
+                                On their turn, they will need to roll a 6 again to get the pawn back onto the board.
+                            </p>
                         </article>
                     </div>
                     <div class="tile">
                         <video width="45%" controls class="video">
-                            <source src="video/hello.mp4" type="video/mp4">
+                            <source src="video/enteringHome.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                         <article class="description">
-                            If a player rolls a six for three times in a row, then he loses his turn and next player gets his turn.
-                            While moving piece, if a player’s piece lands on an opponent’s piece,
-                            the opponent’s piece is sent back to its base where he must roll six again in order to move out from base to starting sequence.
+                            <p><b>Move your pawns around the board going towards your home stretch.</b></p>
+                            <p>
+                                To get your pawns on the home space, you'll need to make a lap all the way around the track of the board.
+                                Follow the arrows on the board if there are any or move your pawns around the edges of the board in a clockwise fashion.
+                                Once you've made a complete lap, your pawns will be moving into the home stretch area of the board.
+                            </p>
                         </article>
                     </div>
                     <div class="tile">
-                        <video width="45%" controls class="video">
-                            <source src="video/hello.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
+                        <image src="Images/allToHome.jpg" width="45%" class="video"></image>
                         <article class="description">
-                            If a player lands on a place occupied by one of his own pieces, that space becomes blocked.
-                            A blocked space cannot be passed or landed on by an opponent’s piece.
-                        </article>
-                    </div>
-                    <div class="tile">
-                        <video width="45%" controls class="video">
-                            <source src="video/hello.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
-                        <article class="description">
-                            When a player’s piece reached to the home column of its own color then it continues to move towards its home triangle.
-                            It can reach to the home triangle only with an exact roll of the die.
-                            In order to win the game, a first player needs to have his all four pieces inside home triangle.
-                            The remaining players will continue the game to determine the runner-ups.
+                            <p><b>Reach the home space with all 4 of your pawns first to win the game.</b></p>
+                            <p>
+                                Getting 1 of your pawns onto the home base space will not win you the game.
+                                Continue rolling on your turn and moving your pawns onto the home base 1 at a time.
+                                The first player to get all of their pawns onto the home base has won the game.
+                            </p>
+                            <ul>
+                                <li>
+                                    If 1 or more of your pawns was captured, you need to roll a 6 to get it onto the board again.
+                                    If you don’t roll a 6, then try again on your next turn.
+                                </li>
+                                <li>
+                                    All 4 of your pawns must travel around the board and move into the home base space to win the game,
+                                    so you cannot win until all of them have made a lap around the board and go into the home space.
+                                </li>
+                            </ul>
                         </article>
                     </div>
                 </div>
