--- a/application/views/css/rules.css
+++ b/application/views/css/rules.css
@@ -13,7 +13,7 @@ section > header {
     padding: 1%;
 }
 
-#rules {
+#rule {
     border-radius: 5px;
     box-shadow: 2px 2px 10px #bfbfbf;
     background-color: #ffffff;
@@ -26,6 +26,8 @@ section > header {
 
 li {
     padding: 1%;
+    margin-left: 3%;
+    list-style-type: circle !important;
 }
 
 .video {
