Code cleanup: Beautified existing code

--- a/application/views/leaderboard.hbs
+++ b/application/views/leaderboard.hbs
@@ -9,9 +9,8 @@
         <link href="css/style.css" rel="stylesheet">
         <script
             src="https://code.jquery.com/jquery-3.3.1.js"
-    		integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    		crossorigin="anonymous">
-        </script>
+            integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+            crossorigin="anonymous"></script>
         <script>
             $(function(){
                 $("#header").load("header.hbs");
@@ -34,7 +33,6 @@
             });
         </script>
     </head>
-
     <body class = "leaderboard">
         <div id="header"></div>
         <div class="container-fluid" style="width:92.5%;">
@@ -55,16 +53,16 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                      {{#each leaderBoard}}
-        								               <tr>
+                                        {{#each leaderBoard}}
+                                        <tr>
                                             <td>{{@index}}</td>
                                             <td>{{name}}</td>
                                             <td>{{point}}</td>
                                             <td>{{totalGame}}</td>
                                             <td>{{winPercentage}}</td>
                                         </tr>
-                                      {{/each}}
-        								            </tbody>
+                                        {{/each}}
+                                    </tbody>
                                 </table>
                             </div>
                         </div>
@@ -72,7 +70,6 @@
                 </div>
             </div>
         </div>
-
         <script src="plugins/common/common.min.js"></script>
         <script src="js/custom.min.js"></script>
         <script src="js/settings.js"></script>
