--- a/application/views/rules.hbs
+++ b/application/views/rules.hbs
@@ -6,8 +6,7 @@
         <script
             src="https://code.jquery.com/jquery-3.3.1.js"
             integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-            crossorigin="anonymous">
-        </script>
+            crossorigin="anonymous"></script>
         <script>
             $(function(){
                 $("#header").load("header.hbs");
@@ -32,9 +31,8 @@
         <link rel="stylesheet" href="css/rules.css">
     </head>
     <body>
-
-            <div id="header"></div>
-            <main>
+        <div id="header"></div>
+        <main>
             <section id="rule" class="section">
                 <header>
                     Rules
